Fix: Landing page image looks stretched
Landing page image looks stretched #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,3 +291,9 @@ header img{
     height: 40px;
     width: 40px;
 }
+
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
